<resources>
    <string name="app_name">OutfitOfTheDay</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="login_LogIn">Log In</string>
    <string name="login_or">or</string>
    <string name="login_SignUpHere">Sign Up Here</string>
    <string name="AppNameHeader">Outfit of the Day</string>
    <string name="addClothes_Label">Label (e.g., T-shirt, skirt)</string>
    <string name="addClothes_Color">Color (e.g., blue, red)</string>
    <string name="addClothes_BrandText">Brand/Text (e.g., Nike, \'Just do it\')</string>
    <string name="addClothes_buttonText">Add to Wardrobe</string>
    <string name="genOutfit_weather">Today\'s Weather Information:\nLoading</string>
    <string name="genOutfit_button1">Load Calendar</string>
    <string name="genOutfit_button2">Generate Outfit</string>
    <string name="home_welcome">Welcome, User!</string>
    <string name="home_statsText">Your Most Common Occasions:</string>
    <string name="signUp_Create">Create Account</string>
    <string name="signUp_logInButton">Log In Here</string>
    <string name="wardrobe_search">Search clothes...</string>
    <string name="clothing_category_all">All</string>
    <string name="clothing_category_hats">Hats</string>
    <string name="clothing_category_tops">Tops</string>
    <string name="clothing_category_Bottoms">Bottoms</string>
    <string name="clothing_category_footwear">Footwear</string>
    <string name="clothing_category_misc">Misc</string>
    <string name="navbar_Home">Home</string>
    <string name="navbar_addClothes">Add Clothes</string>
    <string name="navbar_generate">Generate Outfit</string>
    <string name="navbar_wardrobe">Wardrobe</string>
    <string name="addClothesFail">Failed to capture image!</string>
    <string name="addClothesCameraUnavailable">Camera not available.</string>
    <string name="addClothesAllInputsNeeded">Please fill in all fields and capture an image</string>
    <string name="addClothesSuccess">Outfit added successfully</string>
    <string name="addClothesFailToAdd">Failed to add outfit</string>
    <string name="loading">Loading...</string>
    <string name="generateOutfitEventFail">Please enter your preferred event for the day</string>
    <string name="generateOutfitEventDurationFail">Please enter how long you will wear the outfit for in hours</string>
    <string name="generateOutfitWeatherFail">Please wait until weather information is loaded and try again</string>
    <string name="locationPermFail">Location permission denied</string>
    <string name="weatherAdded">Weather Information Added!</string>
    <string name="needAccesstoGoogle">This app needs to access your Google account (via Contacts).</string>
    <string name="clickAgainForCalendar">Click again to load calendar!</string>
    <string name="calendarAdded">Calendar Added!</string>
    <string name="pieChartCategory_casual">Casual</string>
    <string name="pieChartCategory_formal">Formal</string>
    <string name="pieChartCategory_sport">Sport</string>
    <string name="pieChartCategory_others">Others</string>
    <string name="pieChartCategory_welcomeWord">Welcome</string>
    <string name="failed_Login">Could not login. Please try again.</string>
    <string name="signUp_incomplete">Please don\'t leave any field empty</string>
    <string name="signUp_accountCreationFail">Account creation failed. Please try again.</string>
    <string name="generateOutfitImportantEvent">Most Important Event for Today</string>
    <string name="generateOutfitEventDuration">Duration of Time Outside (hours)</string>
    <string name="use_your_calendar">Use your calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading_weather_information">Loading weather information...</string>
    <string name="your_clothing_wardrobe_distribution">Your clothing wardrobe distribution:</string>
    <string name="weather_clear">Clear</string>
    <string name="weather_mostly_clear">Mostly Clear</string>
    <string name="weather_partly_cloudy">Partly Cloudy</string>
    <string name="weather_mostly_cloudy">Mostly Cloudy</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_fog">Fog</string>
    <string name="weather_drizzle">Drizzle</string>
    <string name="weather_heavy_rain">Heavy Rain</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_snow">Snow</string>
    <string name="weather_freezing_rain">Freezing Rain</string>
    <string name="weather_ice_pellets">Ice Pellets</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="weather_unknown">Weather unknown</string>
    <string-array name="clothing_categories">
        <item>All</item>
        <item>Hats</item>
        <item>Tops</item>
        <item>Bottoms</item>
        <item>Footwear</item>
        <item>Miscellaneous</item>
    </string-array>

</resources>